[gd_scene load_steps=24 format=2]

[ext_resource path="res://Family.gd" type="Script" id=1]
[ext_resource path="res://walk_mom_0.png" type="Texture" id=2]
[ext_resource path="res://walk_mom_1.png" type="Texture" id=3]
[ext_resource path="res://walk_mom_2.png" type="Texture" id=4]
[ext_resource path="res://walk_bro_0.png" type="Texture" id=5]
[ext_resource path="res://walk_bro_1.png" type="Texture" id=6]
[ext_resource path="res://walk_bro_2.png" type="Texture" id=7]
[ext_resource path="res://walk_dad_0.png" type="Texture" id=8]
[ext_resource path="res://walk_dad_1.png" type="Texture" id=9]
[ext_resource path="res://walk_dad_2.png" type="Texture" id=10]
[ext_resource path="res://DyingParticles.tscn" type="PackedScene" id=11]
[ext_resource path="res://Particles2DChange.tscn" type="PackedScene" id=12]
[ext_resource path="res://Particles2DAppearing.tscn" type="PackedScene" id=13]
[ext_resource path="res://SpriteShield.tscn" type="PackedScene" id=14]
[ext_resource path="res://sfx_jump.ogg" type="AudioStream" id=15]
[ext_resource path="res://sfx_protect.ogg" type="AudioStream" id=16]
[ext_resource path="res://sfx_walk.ogg" type="AudioStream" id=17]
[ext_resource path="res://sfx_land.ogg" type="AudioStream" id=18]
[ext_resource path="res://sfx_die.ogg" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "mom",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "bro",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "dad",
"speed": 6.0
} ]

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 4.0
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Initial Velocity", "Scale", "Spread" ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 32.0
scale_random = 0.5
color = Color( 1, 1, 1, 0.490196 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 14, 1 )

[node name="family" type="KinematicBody2D" index="0"]

light_mask = 0
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.1
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Visibility", "collision" ]
family_members = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

light_mask = 0
frames = SubResource( 1 )
animation = "mom"
frame = 1
playing = true
_sections_unfolded = [ "Visibility" ]

[node name="Polygon2D" type="Polygon2D" parent="." index="1"]

visible = false
light_mask = 0
position = Vector2( -15.5, -15.5 )
polygon = PoolVector2Array( 0, 0, 31, 0, 31, 31, 0, 31 )
uv = PoolVector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="2"]

light_mask = 0
position = Vector2( -15.5, -15.5 )
build_mode = 0
polygon = PoolVector2Array( 0, 2, 2, 0, 29, 0, 31, 2, 31, 29, 29, 31, 2, 31, 0, 29 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" parent="." index="3" instance=ExtResource( 11 )]

light_mask = 0
process_material = SubResource( 2 )

[node name="Particles2DChange" parent="." index="4" instance=ExtResource( 12 )]

light_mask = 0

[node name="Particles2DAppearing" parent="." index="5" instance=ExtResource( 13 )]

light_mask = 0
process_material = SubResource( 3 )

[node name="SpriteShield" parent="." index="6" instance=ExtResource( 14 )]

visible = false

[node name="Area2DJumpPrevention" type="Area2D" parent="." index="7"]

light_mask = 0
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DJumpPrevention" index="0"]

light_mask = 0
position = Vector2( 0, -17 )
shape = SubResource( 4 )

[node name="SFX" type="Node" parent="." index="8"]

[node name="jump" type="AudioStreamPlayer" parent="SFX" index="0"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="protect" type="AudioStreamPlayer" parent="SFX" index="1"]

stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="walk" type="AudioStreamPlayer" parent="SFX" index="2"]

stream = ExtResource( 17 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="land" type="AudioStreamPlayer" parent="SFX" index="3"]

stream = ExtResource( 18 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="fail" type="AudioStreamPlayer" parent="SFX" index="4"]

stream = ExtResource( 19 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"


